--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-helmet": "^5.2.0",
     "react-icons": "^3.4.0",
     "react-typography": "^0.16.18",
+    "reactstrap": "^7.1.0",
     "styled-components": "^4.1.3",
     "typeface-merriweather": "0.0.54",
     "typeface-montserrat": "0.0.54",
