--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-manifest": "^2.0.17",
     "gatsby-plugin-offline": "^2.0.23",
     "gatsby-plugin-react-helmet": "^3.0.6",
+    "gatsby-plugin-sass": "^2.0.10",
     "gatsby-plugin-sharp": "^2.0.20",
     "gatsby-plugin-styled-components": "^3.0.5",
     "gatsby-plugin-typography": "^2.2.7",
@@ -28,6 +29,7 @@
     "gatsby-source-filesystem": "^2.0.20",
     "gatsby-transformer-remark": "^2.2.5",
     "gatsby-transformer-sharp": "^2.1.13",
+    "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
     "prismjs": "^1.15.0",
     "react": "^16.8.2",
@@ -36,6 +38,7 @@
     "react-icons": "^3.4.0",
     "react-typography": "^0.16.18",
     "reactstrap": "^7.1.0",
+    "sass": "^1.17.0",
     "styled-components": "^4.1.3",
     "typeface-merriweather": "0.0.54",
     "typeface-montserrat": "0.0.54",
